--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <div id="div_input">
     <form id="inputForm">  
       <label>Enter URL:</label>
-      <input id="inputURL" type="text" size="150" value="" />
+      <input id="inputURL" type="text" size="150" value="<Paste a Tableau shared URL here>" />
       <label>width:</label>
       <input id="inputWidth" type="text" size="5" value="1200" />
       <label>height:</label>
